[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level_base.gd" type="Script" id=1]
[ext_resource path="res://levels/resources/symetry_war_player0000.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -32, 32, 32, -32, 32 )

[node name="level_base" type="Node2D"]
script = ExtResource( 1 )

[node name="player_kin_body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="player_kin_body"]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="player_kin_body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_kin_body/Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
